--- a/src/superswap.ipynb
+++ b/src/superswap.ipynb
@@ -322,16 +322,7 @@
    "execution_count": null,
    "id": "a6fccdf1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "'await' outside async function (949135970.py, line 15)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mtx = await chain._internal_bridge_token(from_token, to_token, amount, get_domain(int(to_token.chain_id)))\u001b[39m\n         ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m 'await' outside async function\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| export\n",
     "\n",
@@ -389,7 +380,7 @@
     "    def swap_from_quote(self, quote: SuperSwapQuote, slippage: Optional[float] = None, salt: Optional[str] = None):\n",
     "        self.check_chain_support(quote.from_token, quote.to_token)\n",
     "\n",
-    "        if quote.is_bridge: return await self.bridge_from_quote(quote)\n",
+    "        if quote.is_bridge: return self.bridge_from_quote(quote)\n",
     "\n",
     "        origin_quote, destination_quote = quote.origin_quote, quote.destination_quote\n",
     "\n",
@@ -583,6 +574,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "inittialied oUSDT -> oUSDT with amount 1\n",
       "inittialied oUSDT -> oUSDT with amount 1\n"
      ]
     }
