--- a/src/abi.ipynb
+++ b/src/abi.ipynb
@@ -103,13 +103,24 @@
     "\n",
     "abis_dir=\"abis\"\n",
     "\n",
-    "def download_contract_abi(name, address, abis_dir=os.path.join(\"sugar\", abis_dir), etherscan_api_url=\"https://api-optimistic.etherscan.io/api\"):\n",
+    "def download_contract_abi(name, address, abis_dir=os.path.join(\"sugar\", abis_dir), etherscan_api_url=\"https://api.etherscan.io/v2/api\"):\n",
     "    api_key = os.getenv(\"ETHERSCAN_API_KEY\")\n",
     "    if not api_key: raise Exception(\"ETHERSCAN_API_KEY not set in environment variables\")\n",
-    "    response = requests.get(etherscan_api_url, params={ \"chainid\": 1, \"module\": \"contract\", \"action\": \"getabi\", \"address\": address, \"apikey\": api_key })\n",
-    "    if response.status_code != 200: raise Exception(f\"API request failed with status code {response.status_code}\")\n",
+    "    params = {\n",
+    "        \"chainid\": \"10\",\n",
+    "        \"module\": \"contract\", \n",
+    "        \"action\": \"getabi\",\n",
+    "        \"address\": address,\n",
+    "        \"apikey\": api_key\n",
+    "    }\n",
+    "    \n",
+    "    response = requests.get(etherscan_api_url, params=params)\n",
+    "    if response.status_code != 200: \n",
+    "        raise Exception(f\"API request failed with status code {response.status_code}\")\n",
+    "    \n",
     "    response_data = response.json()\n",
-    "    if response_data.get(\"message\") != \"OK\": raise Exception(f\"API request failed with message: {response_data.get('message')}\")\n",
+    "    if response_data.get(\"message\") != \"OK\": \n",
+    "        raise Exception(f\"API request failed with message: {response_data.get('message')}\")\n",
     "    os.makedirs(abis_dir, exist_ok=True)\n",
     "    with open(os.path.join(abis_dir, f\"{name}.json\"), \"w\") as file:\n",
     "        json.dump(json.loads(response_data.get(\"result\")), file, indent=4)\n",
