--- a/src/token.ipynb
+++ b/src/token.ipynb
@@ -61,9 +61,17 @@
     "    listed: bool\n",
     "    wrapped_token_address: str = None\n",
     "\n",
+    "    def __eq__(self, other):\n",
+    "        t1, t2 = normalize_address(self.token_address), normalize_address(other.token_address)\n",
+    "        return  t1 == t2 and self.chain_id == other.chain_id\n",
+    "\n",
     "    def to_wei(self, value: float) -> int:\n",
     "        \"\"\"Convert a value to wei based on the token's decimals.\"\"\"\n",
     "        return int(value * 10**self.decimals)\n",
+    "\n",
+    "    def to_decimal(self, value: int) -> float:\n",
+    "        \"\"\"Convert a value from wei to decimal based on the token's decimals.\"\"\"\n",
+    "        return float(value / 10 ** self.decimals)\n",
     "\n",
     "    @property\n",
     "    def is_native(self) -> bool: return self.wrapped_token_address is not None\n",
@@ -85,6 +93,23 @@
     "            decimals=decimals,\n",
     "            listed=listed,\n",
     "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "usdc = Token(chain_id=\"10\", chain_name=\"OP\", token_address='0x0b2C639c533813f4Aa9D7837CAf62653d097Ff85', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None)\n",
+    "velo = Token(chain_id=\"10\", chain_name=\"OP\", token_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', symbol='VELO', decimals=18, listed=True, wrapped_token_address=None)\n",
+    "another_velo = Token(chain_id=\"10\", chain_name=\"OP\", token_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db'.lower(), symbol='VELO', decimals=18, listed=True, wrapped_token_address=None)\n",
+    "velo_poser = Token(chain_id=\"101\", chain_name=\"OOPS\", token_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', symbol='VELO', decimals=18, listed=True, wrapped_token_address=None)\n",
+    "\n",
+    "assert usdc != velo, \"USDC and VELO should not be equal\"\n",
+    "assert velo == another_velo, \"VELO and another VELO should be equal\"\n",
+    "assert velo == velo, \"VELO and VELO should be equal\"\n",
+    "assert velo != velo_poser, \"VELO and VELO poser should not be equal\""
    ]
   },
   {
