helper fixes, wei all the way

--- a/src/helpers.ipynb
+++ b/src/helpers.ipynb
@@ -82,10 +82,10 @@
    "source": [
     "#| export\n",
     "\n",
-    "def float_to_uint256(amount: float, decimals: int = 18) -> int:\n",
+    "def float_to_uint256(value: float, decimals: int = 18) -> int:\n",
     "    \"\"\"Convert float to uint256 with decimal scaling\"\"\"\n",
     "    # Convert float to Decimal for precision\n",
-    "    amount_decimal = Decimal(str(amount))\n",
+    "    amount_decimal = Decimal(str(value))\n",
     "    # Scale by decimals\n",
     "    scaled_amount = amount_decimal * Decimal(10 ** decimals)\n",
     "    # Convert to integer\n",
@@ -134,7 +134,7 @@
     {
      "data": {
       "text/plain": [
-       "1750942347"
+       "1751138542"
       ]
      },
      "execution_count": null,
@@ -227,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "'7635613601916267396248769565479189614153287360361504658375907466'"
+       "'6158671174945408853062640912715530505679255353546882931858805321'"
       ]
      },
      "execution_count": null,
@@ -702,8 +702,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calling sugar onchain took 1.0041 seconds\n",
-      "Another API call took 1.0025 seconds\n"
+      "Calling sugar onchain took 1.0052 seconds\n",
+      "Another API call took 1.0012 seconds\n"
      ]
     }
    ],
