--- a/src/superswap.ipynb
+++ b/src/superswap.ipynb
@@ -246,7 +246,7 @@
     "        return cmds, inputs, swap_data\n",
     "\n",
     "    def prepare_write(self, quote: SuperSwapQuote, total_fee: int) -> tuple[int, int]:\n",
-    "        value = quote.amount_in_wei\n",
+    "        value = quote.amount_in\n",
     "        # TODO: extend this to proper native token support\n",
     "        message_fee = value + total_fee if quote.from_token.wrapped_token_address else total_fee\n",
     "        return value, message_fee\n",
@@ -300,30 +300,30 @@
     "\n",
     "    def get_super_quote(self, from_token: Token, to_token: Token, amount_in: float) -> SuperSwapQuote:\n",
     "        q = None\n",
-    "\n",
+    "        amount_in_wei = from_token.to_wei(amount_in)\n",
     "        with get_chain_from_token(from_token) as from_chain, get_chain_from_token(to_token) as to_chain:\n",
     "            from_bridge_token, to_bridge_token = from_chain.get_superswap_connector_token(), to_chain.get_superswap_connector_token()\n",
     "\n",
     "            # are we bridging?\n",
     "            if from_token == from_bridge_token and to_token == to_bridge_token:\n",
-    "                q = SuperSwapQuote.bridge_quote(from_token=from_token, to_token=to_token, amount_in=amount_in)       \n",
+    "                q = SuperSwapQuote.bridge_quote(from_token=from_token, to_token=to_token, amount_in_wei=amount_in_wei)       \n",
     "            else:\n",
     "                o_q, d_q = None, None\n",
     "                # we only need origin quote if we don't start with bridge token\n",
     "                if from_token != from_bridge_token:\n",
-    "                    o_q = from_chain.get_quote(from_token, from_bridge_token, amount_in)\n",
+    "                    o_q = from_chain.get_quote(from_token, from_bridge_token, amount_wei=amount_in_wei)\n",
     "                    assert o_q is not None, \"No origin quote found\"\n",
     "\n",
     "                # we need destination quote if we don't end with oUSDT\n",
     "                if to_token != to_bridge_token:\n",
-    "                    b_a = SuperSwapQuote.calc_bridged_amount(from_token, to_token, from_bridge_token, to_bridge_token, amount_in, o_q)\n",
+    "                    b_a = SuperSwapQuote.calc_bridged_amount(from_token, to_token, from_bridge_token, to_bridge_token, amount_in_wei, o_q)\n",
     "                    print(f\">>>>>>>>>>>>> b_a: {b_a}\")\n",
-    "                    d_q = to_chain.get_quote(to_bridge_token, to_token, b_a)\n",
+    "                    d_q = to_chain.get_quote(to_bridge_token, to_token, amount_wei=b_a)\n",
     "                    print(f\">>>>>>>>>>>>> d_q: {d_q}\")\n",
     "                    assert d_q is not None, \"No destination quote found\"\n",
     "\n",
     "                q = SuperSwapQuote(from_token=from_token,to_token=to_token, from_bridge_token=from_bridge_token, to_bridge_token=to_bridge_token,\n",
-    "                    amount_in=amount_in, origin_quote=o_q, destination_quote=d_q)\n",
+    "                    amount_in=amount_in_wei, origin_quote=o_q, destination_quote=d_q)\n",
     "        return q\n",
     "\n",
     "    def swap_from_quote(self, quote: SuperSwapQuote, slippage: Optional[float] = None, salt: Optional[str] = None):\n",
@@ -421,27 +421,29 @@
     "    async def get_super_quote(self, from_token: Token, to_token: Token, amount_in: float) -> SuperSwapQuote:\n",
     "        q = None\n",
     "\n",
+    "        amount_in_wei = from_token.to_wei(amount_in)\n",
+    "\n",
     "        async with get_async_chain_from_token(from_token) as from_chain, get_async_chain_from_token(to_token) as to_chain:\n",
     "            from_bridge_token, to_bridge_token = await from_chain.get_superswap_connector_token(), await to_chain.get_superswap_connector_token()\n",
     "\n",
     "            # are we bridging?\n",
     "            if from_token == from_bridge_token and to_token == to_bridge_token:\n",
-    "                q = SuperSwapQuote.bridge_quote(from_token=from_token, to_token=to_token, amount_in=amount_in)       \n",
+    "                q = SuperSwapQuote.bridge_quote(from_token=from_token, to_token=to_token, amount_in_wei=amount_in_wei)\n",
     "            else:\n",
     "                o_q, d_q = None, None\n",
     "                # we only need origin quote if we don't start with bridge token\n",
     "                if from_token != from_bridge_token:\n",
-    "                    o_q = await from_chain.get_quote(from_token, from_bridge_token, amount_in)\n",
+    "                    o_q = await from_chain.get_quote(from_token, from_bridge_token, amount_wei=amount_in_wei)\n",
     "                    assert o_q is not None, \"No origin quote found\"\n",
     "\n",
     "                # we need destination quote if we don't end with bridge token\n",
     "                if to_token != to_bridge_token:\n",
-    "                    b_a = SuperSwapQuote.calc_bridged_amount(from_token, to_token, from_bridge_token, to_bridge_token, amount_in, o_q)\n",
-    "                    d_q = await to_chain.get_quote(to_bridge_token, to_token, b_a)\n",
+    "                    b_a = SuperSwapQuote.calc_bridged_amount(from_token, to_token, from_bridge_token, to_bridge_token, amount_in_wei, o_q)\n",
+    "                    d_q = await to_chain.get_quote(to_bridge_token, to_token, amount_wei=b_a)\n",
     "                    assert d_q is not None, \"No destination quote found\"\n",
     "\n",
     "                q = SuperSwapQuote(from_token=from_token, to_token=to_token, from_bridge_token=from_bridge_token, to_bridge_token=to_bridge_token,\n",
-    "                    amount_in=amount_in, origin_quote=o_q, destination_quote=d_q)\n",
+    "                    amount_in=amount_in_wei, origin_quote=o_q, destination_quote=d_q)\n",
     "\n",
     "        return q\n",
     "\n",
