--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -353,29 +353,29 @@
     "    to_token: Token\n",
     "    from_bridge_token: Token\n",
     "    to_bridge_token: Token\n",
-    "    amount_in: float\n",
+    "    amount_in: int\n",
     "    origin_quote: Optional[Quote] = None\n",
     "    destination_quote: Optional[Quote] = None\n",
     "\n",
     "    @staticmethod\n",
-    "    def bridge_quote(from_token: Token, to_token: Token, amount_in: float) -> 'SuperSwapQuote':\n",
-    "        return SuperSwapQuote(from_token=from_token, to_token=to_token, from_bridge_token=from_token, to_bridge_token=to_token, amount_in=amount_in)\n",
+    "    def bridge_quote(from_token: Token, to_token: Token, amount_in_wei: int) -> 'SuperSwapQuote':\n",
+    "        return SuperSwapQuote(from_token=from_token, to_token=to_token, from_bridge_token=from_token, to_bridge_token=to_token, amount_in=amount_in_wei)\n",
     "\n",
     "    @staticmethod\n",
     "    def calc_bridged_amount(from_token: Token, to_token: Token, from_bridge_token: Token, to_bridge_token: Token,\n",
-    "        amount_in: float, origin_quote: Optional[Quote] = None\n",
-    "    ) -> float:\n",
+    "        amount_in_wei: int, origin_quote: Optional[Quote] = None\n",
+    "    ) -> int:\n",
     "        if from_token != from_bridge_token:\n",
     "            assert origin_quote is not None, \"origin_quote must be set\"\n",
-    "            return from_bridge_token.to_decimal(origin_quote.amount_out) \n",
-    "        else: return amount_in\n",
+    "            return origin_quote.amount_out\n",
+    "        else: return amount_in_wei\n",
     "\n",
     "    @property\n",
-    "    def bridged_amount(self) -> float: \n",
+    "    def bridged_amount(self) -> int: \n",
     "        return SuperSwapQuote.calc_bridged_amount(\n",
     "            from_token=self.from_token, to_token=self.to_token,\n",
     "            from_bridge_token=self.from_bridge_token, to_bridge_token=self.to_bridge_token,\n",
-    "            amount_in=self.amount_in, origin_quote=self.origin_quote\n",
+    "            amount_in_wei=self.amount_in, origin_quote=self.origin_quote\n",
     "        )\n",
     "\n",
     "    @property\n",
@@ -385,9 +385,6 @@
     "\n",
     "    @property\n",
     "    def is_bridge(self) -> bool: return self.from_token == self.from_bridge_token and self.to_token == self.to_bridge_token\n",
-    "\n",
-    "    @property\n",
-    "    def amount_in_wei(self) -> int: return self.from_token.to_wei(self.amount_in)\n",
     "\n",
     "@dataclass(frozen=True)\n",
     "class SuperSwapDataInput:\n",
