--- a/src/superswap.ipynb
+++ b/src/superswap.ipynb
@@ -358,10 +358,10 @@
     "                xchain_fee=xchain_fee,\n",
     "                salt=salt\n",
     "            )\n",
+    "            return self.write(quote, cmds=cmds, inputs=inputs, swap_data=swap_data, total_fee=total_fee)\n",
     "\n",
-    "            return self.write(quote, chain=self.chain_for_writes or self.from_chain, cmds=cmds, inputs=inputs, swap_data=swap_data, total_fee=total_fee)\n",
-    "\n",
-    "    def write(self, quote: SuperSwapQuote, chain: AsyncChain, swap_data: SuperSwapData, cmds: str, inputs: List[bytes], total_fee: int) -> str:\n",
+    "    def write(self, quote: SuperSwapQuote, swap_data: SuperSwapData, cmds: str, inputs: List[bytes], total_fee: int) -> str:\n",
+    "        chain = self.chain_for_writes or get_chain_from_token(quote.from_token)\n",
     "        value, message_fee = self.prepare_write(quote, total_fee)\n",
     "        print(f\">>>>>>>>>> gonn write {value} wei with message fee {message_fee} wei\", quote, swap_data)\n",
     "        with chain:\n",
@@ -480,9 +480,10 @@
     "                salt=salt\n",
     "            )\n",
     "\n",
-    "            return await self.write(quote, chain=self.chain_for_writes or from_chain, cmds=cmds, inputs=inputs, swap_data=swap_data, total_fee=total_fee)\n",
+    "            return await self.write(quote, cmds=cmds, inputs=inputs, swap_data=swap_data, total_fee=total_fee)\n",
     "\n",
-    "    async def write(self, quote: SuperSwapQuote, chain: AsyncChain, swap_data: SuperSwapData, cmds: str, inputs: List[bytes], total_fee: int) -> str:\n",
+    "    async def write(self, quote: SuperSwapQuote, swap_data: SuperSwapData, cmds: str, inputs: List[bytes], total_fee: int) -> str:\n",
+    "        chain=self.chain_for_writes or get_async_chain_from_token(quote.from_token)\n",
     "        value, message_fee = self.prepare_write(quote, total_fee)\n",
     "        async with chain:\n",
     "            await chain.set_token_allowance(quote.from_token, chain.settings.swapper_contract_addr, value)\n",
