--- a/src/superswap.ipynb
+++ b/src/superswap.ipynb
@@ -187,14 +187,6 @@
     "supported_chains = [\"OP\", \"Lisk\", \"Uni\"]\n",
     "\n",
     "class SuperswapCommon:\n",
-    "    # @property\n",
-    "    # def bridged_amount(self, from_token: Token, to_token: Token, amount_in: float, from_bridge: Token, origin_quote: Optional[Quote]) -> float:\n",
-    "    #     if from_token != from_bridge:\n",
-    "    #         assert origin_quote is not None, \"origin_quote must be set\"\n",
-    "    #         return from_bridge.to_decimal(origin_quote.amount_out) \n",
-    "    #     else:\n",
-    "    #         return from_token.to_decimal(amount_in)\n",
-    "\n",
     "    def check_chain_support(self, from_token: Token, to_token: Token) -> None:\n",
     "        \"\"\"Check if the given tokens are supported for superswap.\"\"\"\n",
     "        from_chain, to_chain = get_async_chain_from_token(from_token), get_async_chain_from_token(to_token)\n",
@@ -299,8 +291,7 @@
     "        return self.swap_from_quote(quote=quote, slippage=slippage)\n",
     "\n",
     "    def get_super_quote(self, from_token: Token, to_token: Token, amount_in: float) -> SuperSwapQuote:\n",
-    "        q = None\n",
-    "        amount_in_wei = from_token.to_wei(amount_in)\n",
+    "        q, amount_in_wei = None, from_token.to_wei(amount_in)\n",
     "        with get_chain_from_token(from_token) as from_chain, get_chain_from_token(to_token) as to_chain:\n",
     "            from_bridge_token, to_bridge_token = from_chain.get_superswap_connector_token(), to_chain.get_superswap_connector_token()\n",
     "\n",
@@ -317,9 +308,7 @@
     "                # we need destination quote if we don't end with oUSDT\n",
     "                if to_token != to_bridge_token:\n",
     "                    b_a = SuperSwapQuote.calc_bridged_amount(from_token, to_token, from_bridge_token, to_bridge_token, amount_in_wei, o_q)\n",
-    "                    print(f\">>>>>>>>>>>>> b_a: {b_a}\")\n",
     "                    d_q = to_chain.get_quote(to_bridge_token, to_token, amount_wei=b_a)\n",
-    "                    print(f\">>>>>>>>>>>>> d_q: {d_q}\")\n",
     "                    assert d_q is not None, \"No destination quote found\"\n",
     "\n",
     "                q = SuperSwapQuote(from_token=from_token,to_token=to_token, from_bridge_token=from_bridge_token, to_bridge_token=to_bridge_token,\n",
@@ -363,21 +352,8 @@
     "    def write(self, quote: SuperSwapQuote, swap_data: SuperSwapData, cmds: str, inputs: List[bytes], total_fee: int) -> str:\n",
     "        chain = self.chain_for_writes or get_chain_from_token(quote.from_token)\n",
     "        value, message_fee = self.prepare_write(quote, total_fee)\n",
-    "        print(f\">>>>>>>>>> gonn write {value} wei with message fee {message_fee} wei\", quote, swap_data)\n",
     "        with chain:\n",
     "            chain.set_token_allowance(quote.from_token, chain.settings.swapper_contract_addr, value)\n",
-    "\n",
-    "            tx_function = chain.swapper.functions.execute(*[cmds, inputs])\n",
-    "            built_tx = tx_function.build_transaction({\n",
-    "                'value': message_fee,\n",
-    "                'from': chain.account.address,\n",
-    "                'gas': 2000000,  # adjust as needed\n",
-    "                'gasPrice': chain.web3.eth.gas_price\n",
-    "            })\n",
-    "\n",
-    "            print(f\"Built transaction: {built_tx}\")\n",
-    "\n",
-    "\n",
     "            tx = chain.sign_and_send_tx(chain.swapper.functions.execute(*[cmds, inputs]), value=message_fee)\n",
     "            return self.prepare_result(swap_data, tx)"
    ]
@@ -419,10 +395,7 @@
     "        return await self.swap_from_quote(quote=quote, slippage=slippage)\n",
     "\n",
     "    async def get_super_quote(self, from_token: Token, to_token: Token, amount_in: float) -> SuperSwapQuote:\n",
-    "        q = None\n",
-    "\n",
-    "        amount_in_wei = from_token.to_wei(amount_in)\n",
-    "\n",
+    "        q, amount_in_wei = None, from_token.to_wei(amount_in)\n",
     "        async with get_async_chain_from_token(from_token) as from_chain, get_async_chain_from_token(to_token) as to_chain:\n",
     "            from_bridge_token, to_bridge_token = await from_chain.get_superswap_connector_token(), await to_chain.get_superswap_connector_token()\n",
     "\n",
@@ -483,7 +456,7 @@
     "            return await self.write(quote, cmds=cmds, inputs=inputs, swap_data=swap_data, total_fee=total_fee)\n",
     "\n",
     "    async def write(self, quote: SuperSwapQuote, swap_data: SuperSwapData, cmds: str, inputs: List[bytes], total_fee: int) -> str:\n",
-    "        chain=self.chain_for_writes or get_async_chain_from_token(quote.from_token)\n",
+    "        chain = self.chain_for_writes or get_async_chain_from_token(quote.from_token)\n",
     "        value, message_fee = self.prepare_write(quote, total_fee)\n",
     "        async with chain:\n",
     "            await chain.set_token_allowance(quote.from_token, chain.settings.swapper_contract_addr, value)\n",
@@ -516,44 +489,7 @@
     "quote = await AsyncSuperswap().get_super_quote(from_token=from_token, to_token=to_token, amount_in=amount)\n",
     "test_eq(quote.is_bridge, True)\n",
     "quote = Superswap().get_super_quote(from_token=from_token, to_token=to_token, amount_in=amount)\n",
-    "test_eq(quote.is_bridge, True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38a4a092",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# real calls\n",
-    "# async with AsyncOPChain() as op:\n",
-    "#     from_token, to_token = AsyncOPChain.velo, AsyncLiskChain.eth\n",
-    "#     tx = await AsyncSuperswap().swap(from_token, to_token, amount=20)\n",
-    "#     print(f\"Async swap tx: {tx}\")\n",
-    "\n",
-    "# async with AsyncLiskChain() as lisk:\n",
-    "#     from_token, to_token = AsyncLiskChain.lsk, AsyncOPChain.o_usdt\n",
-    "#     tx = await AsyncSuperswap().swap(from_token, to_token, amount=4)\n",
-    "#     print(f\"Async swap tx: {tx}\")\n",
-    "\n",
-    "\n",
-    "    \n",
-    "# from_token, to_token = AsyncOPChain.o_usdt, AsyncLiskChain.lsk\n",
-    "# tx = await AsyncSuperswap().swap(from_token, to_token, amount=1)\n",
-    "# print(tx)\n",
-    "\n",
-    "\n",
-    "# assert(tx.startswith(\"0x\"))\n",
-    "# test_eq(relayer.get_call_count(), 1)\n",
-    "# last_call = relayer.get_last_call()\n",
-    "# test_eq(type(last_call[\"salt\"]), str)\n",
-    "# test_eq(type(last_call[\"origin_domain\"]), int)\n",
-    "\n",
-    "\n",
-    "#from_token, to_token = AsyncOPChain.o_usdt, AsyncLiskChain.lsk\n",
-    "#tx = Superswap().swap(from_token, to_token, amount=1)\n",
-    "    "
+    "test_eq(quote.is_bridge, True)"
    ]
   },
   {
