--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -353,13 +353,38 @@
     "    to_token: Token\n",
     "    from_bridge_token: Token\n",
     "    to_bridge_token: Token\n",
-    "    amount_in: float\n",
+    "    amount_in: int\n",
     "    origin_quote: Optional[Quote] = None\n",
     "    destination_quote: Optional[Quote] = None\n",
     "\n",
+    "    @staticmethod\n",
+    "    def bridge_quote(from_token: Token, to_token: Token, amount_in_wei: int) -> 'SuperSwapQuote':\n",
+    "        return SuperSwapQuote(from_token=from_token, to_token=to_token, from_bridge_token=from_token, to_bridge_token=to_token, amount_in=amount_in_wei)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def calc_bridged_amount(from_token: Token, to_token: Token, from_bridge_token: Token, to_bridge_token: Token,\n",
+    "        amount_in_wei: int, origin_quote: Optional[Quote] = None\n",
+    "    ) -> int:\n",
+    "        if from_token != from_bridge_token:\n",
+    "            assert origin_quote is not None, \"origin_quote must be set\"\n",
+    "            return origin_quote.amount_out\n",
+    "        else: return amount_in_wei\n",
+    "\n",
     "    @property\n",
-    "    def is_bridge(self) -> bool:\n",
-    "        return self.from_token.token_address == self.from_bridge_token.token_address and self.to_token.token_address == self.to_bridge_token.token_address\n",
+    "    def bridged_amount(self) -> int: \n",
+    "        return SuperSwapQuote.calc_bridged_amount(\n",
+    "            from_token=self.from_token, to_token=self.to_token,\n",
+    "            from_bridge_token=self.from_bridge_token, to_bridge_token=self.to_bridge_token,\n",
+    "            amount_in_wei=self.amount_in, origin_quote=self.origin_quote\n",
+    "        )\n",
+    "\n",
+    "    @property\n",
+    "    def bridged_amount_wei(self) -> int:\n",
+    "        ba = self.from_bridge_token.to_wei(self.bridged_amount)\n",
+    "        return self.from_token.to_wei(ba) if self.from_token == self.from_bridge_token else self.from_bridge_token.to_wei(ba)\n",
+    "\n",
+    "    @property\n",
+    "    def is_bridge(self) -> bool: return self.from_token == self.from_bridge_token and self.to_token == self.to_bridge_token\n",
     "\n",
     "@dataclass(frozen=True)\n",
     "class SuperSwapDataInput:\n",
@@ -378,12 +403,32 @@
     "    destination_router: str\n",
     "    destination_domain: int\n",
     "    slippage: float\n",
-    "    bridged_amount: int\n",
     "    swapper_contract_addr: str\n",
-    "    destination_quote: Optional[Quote]\n",
     "    salt: str\n",
     "    bridge_fee: int \n",
     "    xchain_fee: int\n",
+    "    destination_quote: Optional[Quote]\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def build(\n",
+    "            quote: SuperSwapQuote, account: str,\n",
+    "            user_ICA: str, user_ICA_balance: int,\n",
+    "            origin_domain: int, origin_bridge: str, origin_hook: str, origin_ICA_router: str,\n",
+    "            destination_ICA_router: str, destination_router: str, destination_domain: int,\n",
+    "            slippage: float,\n",
+    "            swapper_contract_addr: str, salt: str,\n",
+    "            bridge_fee: int, xchain_fee: int\n",
+    "        ) -> 'SuperSwapDataInput':\n",
+    "        return SuperSwapDataInput(\n",
+    "            from_token=quote.from_token, to_token=quote.to_token, from_bridge_token=quote.from_bridge_token, to_bridge_token=quote.to_bridge_token,\n",
+    "            account=account, user_ICA=user_ICA, user_ICA_balance=user_ICA_balance,\n",
+    "            origin_domain=origin_domain, origin_bridge=origin_bridge, origin_hook=origin_hook, origin_ICA_router=origin_ICA_router,\n",
+    "            destination_ICA_router=destination_ICA_router, destination_router=destination_router, destination_domain=destination_domain,\n",
+    "            slippage=slippage,\n",
+    "            swapper_contract_addr=swapper_contract_addr, salt=salt,\n",
+    "            bridge_fee=bridge_fee, xchain_fee=xchain_fee,\n",
+    "            destination_quote=quote.destination_quote\n",
+    "        )\n",
     "\n",
     "@dataclass(frozen=True)\n",
     "class SuperSwapData:\n",
@@ -502,7 +547,7 @@
     "        i.user_ICA if needs_relay else i.account,\n",
     "        i.from_bridge_token.token_address,\n",
     "        i.origin_bridge,\n",
-    "        d_quote.amount_in_wei if starts_with_bridge_token else CONTRACT_BALANCE_FOR_V3_SWAPS,\n",
+    "        d_quote.amount_in if starts_with_bridge_token else CONTRACT_BALANCE_FOR_V3_SWAPS,\n",
     "        i.bridge_fee,\n",
     "        i.destination_domain,\n",
     "        starts_with_bridge_token,\n",
