--- a/src/superswap.ipynb
+++ b/src/superswap.ipynb
@@ -307,7 +307,7 @@
     "\n",
     "                # we need destination quote if we don't end with oUSDT\n",
     "                if to_token != to_bridge_token:\n",
-    "                    b_a = SuperSwapQuote.calc_bridged_amount(from_token, to_token, from_bridge_token, to_bridge_token, amount_in_wei, o_q)\n",
+    "                    b_a = SuperSwapQuote.calc_bridged_amount(from_token, to_token, from_bridge_token, amount_in_wei, o_q)\n",
     "                    d_q = to_chain.get_quote(to_bridge_token, to_token, amount_wei=b_a)\n",
     "                    assert d_q is not None, \"No destination quote found\"\n",
     "\n",
@@ -411,7 +411,7 @@
     "\n",
     "                # we need destination quote if we don't end with bridge token\n",
     "                if to_token != to_bridge_token:\n",
-    "                    b_a = SuperSwapQuote.calc_bridged_amount(from_token, to_token, from_bridge_token, to_bridge_token, amount_in_wei, o_q)\n",
+    "                    b_a = SuperSwapQuote.calc_bridged_amount(from_token, to_token, from_bridge_token, amount_in_wei, o_q)\n",
     "                    d_q = await to_chain.get_quote(to_bridge_token, to_token, amount_wei=b_a)\n",
     "                    assert d_q is not None, \"No destination quote found\"\n",
     "\n",
