--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -362,9 +362,7 @@
     "        return SuperSwapQuote(from_token=from_token, to_token=to_token, from_bridge_token=from_token, to_bridge_token=to_token, amount_in=amount_in_wei)\n",
     "\n",
     "    @staticmethod\n",
-    "    def calc_bridged_amount(from_token: Token, to_token: Token, from_bridge_token: Token, to_bridge_token: Token,\n",
-    "        amount_in_wei: int, origin_quote: Optional[Quote] = None\n",
-    "    ) -> int:\n",
+    "    def calc_bridged_amount(from_token: Token, to_token: Token, from_bridge_token: Token, amount_in_wei: int, origin_quote: Optional[Quote] = None) -> int:\n",
     "        if from_token != from_bridge_token:\n",
     "            assert origin_quote is not None, \"origin_quote must be set\"\n",
     "            return origin_quote.amount_out\n",
@@ -374,8 +372,7 @@
     "    def bridged_amount(self) -> int: \n",
     "        return SuperSwapQuote.calc_bridged_amount(\n",
     "            from_token=self.from_token, to_token=self.to_token,\n",
-    "            from_bridge_token=self.from_bridge_token, to_bridge_token=self.to_bridge_token,\n",
-    "            amount_in_wei=self.amount_in, origin_quote=self.origin_quote\n",
+    "            from_bridge_token=self.from_bridge_token, amount_in_wei=self.amount_in, origin_quote=self.origin_quote\n",
     "        )\n",
     "\n",
     "    @property\n",
