--- a/src/quote.ipynb
+++ b/src/quote.ipynb
@@ -39,7 +39,8 @@
     "from eth_abi.packed import encode_packed\n",
     "from dataclasses import dataclass\n",
     "from sugar.token import Token\n",
-    "from sugar.pool import LiquidityPoolForSwap"
+    "from sugar.pool import LiquidityPoolForSwap\n",
+    "from typing import Optional"
    ]
   },
   {
@@ -109,6 +110,58 @@
     "    def path(self) -> List[Tuple[LiquidityPoolForSwap, bool]]: return self.input.path\n",
     "    @property\n",
     "    def amount_in(self) -> int: return self.input.amount_in\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Superswap 🐝 quote "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "\n",
+    "@dataclass(frozen=True)\n",
+    "class SuperswapQuote:\n",
+    "    from_token: Token\n",
+    "    to_token: Token\n",
+    "    from_bridge_token: Token\n",
+    "    to_bridge_token: Token\n",
+    "    amount_in: int\n",
+    "    origin_quote: Optional[Quote] = None\n",
+    "    destination_quote: Optional[Quote] = None\n",
+    "\n",
+    "    @property\n",
+    "    def amount_out(self) -> int:\n",
+    "        return self.destination_quote.amount_out if self.destination_quote else self.bridged_amount\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def bridge_quote(from_token: Token, to_token: Token, amount_in_wei: int) -> 'SuperswapQuote':\n",
+    "        return SuperswapQuote(from_token=from_token, to_token=to_token, from_bridge_token=from_token, to_bridge_token=to_token, amount_in=amount_in_wei)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def calc_bridged_amount(from_token: Token, to_token: Token, from_bridge_token: Token, amount_in_wei: int, origin_quote: Optional[Quote] = None) -> int:\n",
+    "        if from_token != from_bridge_token:\n",
+    "            assert origin_quote is not None, \"origin_quote must be set\"\n",
+    "            return origin_quote.amount_out\n",
+    "        else: return amount_in_wei\n",
+    "\n",
+    "    @property\n",
+    "    def bridged_amount(self) -> int: \n",
+    "        return SuperswapQuote.calc_bridged_amount(\n",
+    "            from_token=self.from_token, to_token=self.to_token,\n",
+    "            from_bridge_token=self.from_bridge_token, amount_in_wei=self.amount_in, origin_quote=self.origin_quote\n",
+    "        )\n",
+    "\n",
+    "    @property\n",
+    "    def is_bridge(self) -> bool: return self.from_token == self.from_bridge_token and self.to_token == self.to_bridge_token"
    ]
   },
   {
