--- a/src/superswap.ipynb
+++ b/src/superswap.ipynb
@@ -28,10 +28,9 @@
     "#| export\n",
     "\n",
     "import json, requests\n",
-    "from dataclasses import dataclass\n",
-    "from sugar.swap import build_super_swap_data, SuperSwapData, SuperSwapQuote, setup_planner, SuperSwapDataInput\n",
+    "from sugar.swap import build_super_swap_data, SuperSwapData, setup_planner, SuperSwapDataInput\n",
     "from sugar.token import Token\n",
-    "from sugar.quote import Quote\n",
+    "from sugar.quote import SuperswapQuote\n",
     "from sugar.helpers import get_salt, serialize_ica_calls\n",
     "from sugar.config import hyperlane_relay_url, hyperlane_relayers\n",
     "from sugar.chains import get_chain_from_token, get_async_chain_from_token, AsyncChain, Chain, AsyncOPChain, OPChain\n",
@@ -195,7 +194,7 @@
     "\n",
     "    def prepare_super_swap(\n",
     "        self, \n",
-    "        quote: SuperSwapQuote,\n",
+    "        quote: SuperswapQuote,\n",
     "        from_chain: Union[Chain, AsyncChain], to_chain: Union[Chain, AsyncChain],\n",
     "        user_ica_address: str, user_ICA_balance: int, origin_domain: int, destination_domain: int,\n",
     "        origin_hook: str, slippage: float, bridge_fee: int, xchain_fee: int, salt: Optional[str] = None\n",
@@ -237,7 +236,7 @@
     "\n",
     "        return cmds, inputs, swap_data\n",
     "\n",
-    "    def prepare_write(self, quote: SuperSwapQuote, total_fee: int) -> tuple[int, int]:\n",
+    "    def prepare_write(self, quote: SuperswapQuote, total_fee: int) -> tuple[int, int]:\n",
     "        value = quote.amount_in\n",
     "        # TODO: extend this to proper native token support\n",
     "        message_fee = value + total_fee if quote.from_token.wrapped_token_address else total_fee\n",
@@ -275,7 +274,7 @@
     "    def __init__(self, relayer: Optional[SuperswapRelayer] = None, chain_for_writes: Optional[Chain] = None):\n",
     "        self.chain_for_writes, self.relayer = chain_for_writes, relayer or HTTPSuperswapRelayer()\n",
     "\n",
-    "    def bridge_from_quote(self, quote: SuperSwapQuote) -> str:\n",
+    "    def bridge_from_quote(self, quote: SuperswapQuote) -> str:\n",
     "        assert quote.is_bridge, \"bridge_from_quote can only be used for bridge quotes\"\n",
     "        self.check_chain_support(quote.from_token, quote.to_token)\n",
     "        chain = self.chain_for_writes or get_chain_from_token(quote.from_token)\n",
@@ -290,14 +289,14 @@
     "        quote = self.get_super_quote(from_token=from_token, to_token=to_token, amount_in=amount)\n",
     "        return self.swap_from_quote(quote=quote, slippage=slippage)\n",
     "\n",
-    "    def get_super_quote(self, from_token: Token, to_token: Token, amount_in: float) -> SuperSwapQuote:\n",
+    "    def get_super_quote(self, from_token: Token, to_token: Token, amount_in: float) -> SuperswapQuote:\n",
     "        q, amount_in_wei = None, from_token.to_wei(amount_in)\n",
     "        with get_chain_from_token(from_token) as from_chain, get_chain_from_token(to_token) as to_chain:\n",
     "            from_bridge_token, to_bridge_token = from_chain.get_superswap_connector_token(), to_chain.get_superswap_connector_token()\n",
     "\n",
     "            # are we bridging?\n",
     "            if from_token == from_bridge_token and to_token == to_bridge_token:\n",
-    "                q = SuperSwapQuote.bridge_quote(from_token=from_token, to_token=to_token, amount_in_wei=amount_in_wei)       \n",
+    "                q = SuperswapQuote.bridge_quote(from_token=from_token, to_token=to_token, amount_in_wei=amount_in_wei)       \n",
     "            else:\n",
     "                o_q, d_q = None, None\n",
     "                # we only need origin quote if we don't start with bridge token\n",
@@ -307,21 +306,20 @@
     "\n",
     "                # we need destination quote if we don't end with oUSDT\n",
     "                if to_token != to_bridge_token:\n",
-    "                    b_a = SuperSwapQuote.calc_bridged_amount(from_token, to_token, from_bridge_token, amount_in_wei, o_q)\n",
+    "                    b_a = SuperswapQuote.calc_bridged_amount(from_token, to_token, from_bridge_token, amount_in_wei, o_q)\n",
     "                    d_q = to_chain.get_quote(to_bridge_token, to_token, amount_wei=b_a)\n",
     "                    assert d_q is not None, \"No destination quote found\"\n",
     "\n",
-    "                q = SuperSwapQuote(from_token=from_token,to_token=to_token, from_bridge_token=from_bridge_token, to_bridge_token=to_bridge_token,\n",
+    "                q = SuperswapQuote(from_token=from_token,to_token=to_token, from_bridge_token=from_bridge_token, to_bridge_token=to_bridge_token,\n",
     "                    amount_in=amount_in_wei, origin_quote=o_q, destination_quote=d_q)\n",
     "        return q\n",
     "\n",
-    "    def swap_from_quote(self, quote: SuperSwapQuote, slippage: Optional[float] = None, salt: Optional[str] = None):\n",
+    "    def swap_from_quote(self, quote: SuperswapQuote, slippage: Optional[float] = None, salt: Optional[str] = None):\n",
     "        self.check_chain_support(quote.from_token, quote.to_token)\n",
     "\n",
     "        if quote.is_bridge: return self.bridge_from_quote(quote)\n",
     "\n",
     "        from_token, to_token = quote.from_token, quote.to_token\n",
-    "        origin_quote, destination_quote = quote.origin_quote, quote.destination_quote\n",
     "\n",
     "        with get_chain_from_token(from_token) as from_chain, get_chain_from_token(to_token) as to_chain:\n",
     "            if not from_chain.account: raise ValueError(\"Cannot superswap without an account. Please connect your wallet first.\")\n",
@@ -349,7 +347,7 @@
     "            )\n",
     "            return self.write(quote, cmds=cmds, inputs=inputs, swap_data=swap_data, total_fee=total_fee)\n",
     "\n",
-    "    def write(self, quote: SuperSwapQuote, swap_data: SuperSwapData, cmds: str, inputs: List[bytes], total_fee: int) -> str:\n",
+    "    def write(self, quote: SuperswapQuote, swap_data: SuperSwapData, cmds: str, inputs: List[bytes], total_fee: int) -> str:\n",
     "        chain = self.chain_for_writes or get_chain_from_token(quote.from_token)\n",
     "        value, message_fee = self.prepare_write(quote, total_fee)\n",
     "        with chain:\n",
@@ -379,7 +377,7 @@
     "    def __init__(self, relayer: Optional[SuperswapRelayer] = None, chain_for_writes: Optional[AsyncChain] = None):\n",
     "        self.chain_for_writes, self.relayer = chain_for_writes, relayer or HTTPSuperswapRelayer()\n",
     "\n",
-    "    async def bridge_from_quote(self, quote: SuperSwapQuote) -> str:\n",
+    "    async def bridge_from_quote(self, quote: SuperswapQuote) -> str:\n",
     "        assert quote.is_bridge, \"bridge_from_quote can only be used for bridge quotes\"\n",
     "        self.check_chain_support(quote.from_token, quote.to_token)\n",
     "        chain = self.chain_for_writes or get_async_chain_from_token(quote.from_token)\n",
@@ -394,14 +392,14 @@
     "        quote = await self.get_super_quote(from_token=from_token, to_token=to_token, amount_in=amount)\n",
     "        return await self.swap_from_quote(quote=quote, slippage=slippage)\n",
     "\n",
-    "    async def get_super_quote(self, from_token: Token, to_token: Token, amount_in: float) -> SuperSwapQuote:\n",
+    "    async def get_super_quote(self, from_token: Token, to_token: Token, amount_in: float) -> SuperswapQuote:\n",
     "        q, amount_in_wei = None, from_token.to_wei(amount_in)\n",
     "        async with get_async_chain_from_token(from_token) as from_chain, get_async_chain_from_token(to_token) as to_chain:\n",
     "            from_bridge_token, to_bridge_token = await from_chain.get_superswap_connector_token(), await to_chain.get_superswap_connector_token()\n",
     "\n",
     "            # are we bridging?\n",
     "            if from_token == from_bridge_token and to_token == to_bridge_token:\n",
-    "                q = SuperSwapQuote.bridge_quote(from_token=from_token, to_token=to_token, amount_in_wei=amount_in_wei)\n",
+    "                q = SuperswapQuote.bridge_quote(from_token=from_token, to_token=to_token, amount_in_wei=amount_in_wei)\n",
     "            else:\n",
     "                o_q, d_q = None, None\n",
     "                # we only need origin quote if we don't start with bridge token\n",
@@ -411,22 +409,21 @@
     "\n",
     "                # we need destination quote if we don't end with bridge token\n",
     "                if to_token != to_bridge_token:\n",
-    "                    b_a = SuperSwapQuote.calc_bridged_amount(from_token, to_token, from_bridge_token, amount_in_wei, o_q)\n",
+    "                    b_a = SuperswapQuote.calc_bridged_amount(from_token, to_token, from_bridge_token, amount_in_wei, o_q)\n",
     "                    d_q = await to_chain.get_quote(to_bridge_token, to_token, amount_wei=b_a)\n",
     "                    assert d_q is not None, \"No destination quote found\"\n",
     "\n",
-    "                q = SuperSwapQuote(from_token=from_token, to_token=to_token, from_bridge_token=from_bridge_token, to_bridge_token=to_bridge_token,\n",
+    "                q = SuperswapQuote(from_token=from_token, to_token=to_token, from_bridge_token=from_bridge_token, to_bridge_token=to_bridge_token,\n",
     "                    amount_in=amount_in_wei, origin_quote=o_q, destination_quote=d_q)\n",
     "\n",
     "        return q\n",
     "\n",
-    "    async def swap_from_quote(self, quote: SuperSwapQuote, slippage: Optional[float] = None, salt: Optional[str] = None):\n",
+    "    async def swap_from_quote(self, quote: SuperswapQuote, slippage: Optional[float] = None, salt: Optional[str] = None):\n",
     "        self.check_chain_support(quote.from_token, quote.to_token)\n",
     "\n",
     "        if quote.is_bridge: return await self.bridge_from_quote(quote)\n",
     "\n",
     "        from_token, to_token = quote.from_token, quote.to_token\n",
-    "        origin_quote, destination_quote = quote.origin_quote, quote.destination_quote\n",
     "\n",
     "        async with get_async_chain_from_token(from_token) as from_chain, get_async_chain_from_token(to_token) as to_chain:\n",
     "            if not from_chain.account: raise ValueError(\"Cannot superswap without an account. Please connect your wallet first.\")\n",
@@ -455,7 +452,7 @@
     "\n",
     "            return await self.write(quote, cmds=cmds, inputs=inputs, swap_data=swap_data, total_fee=total_fee)\n",
     "\n",
-    "    async def write(self, quote: SuperSwapQuote, swap_data: SuperSwapData, cmds: str, inputs: List[bytes], total_fee: int) -> str:\n",
+    "    async def write(self, quote: SuperswapQuote, swap_data: SuperSwapData, cmds: str, inputs: List[bytes], total_fee: int) -> str:\n",
     "        chain = self.chain_for_writes or get_async_chain_from_token(quote.from_token)\n",
     "        value, message_fee = self.prepare_write(quote, total_fee)\n",
     "        async with chain:\n",
@@ -481,13 +478,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sugar.chains import AsyncOPChain, AsyncLiskChain, AsyncOPChainSimnet, OPChainSimnet\n",
+    "from sugar.chains import AsyncOPChain, AsyncLiskChain\n",
     "from fastcore.test import test_eq\n",
     "\n",
     "from_token, to_token, amount = AsyncOPChain.o_usdt, AsyncLiskChain.o_usdt, 1\n",
     "\n",
     "quote = await AsyncSuperswap().get_super_quote(from_token=from_token, to_token=to_token, amount_in=amount)\n",
     "test_eq(quote.is_bridge, True)\n",
+    "test_eq(quote.amount_out, AsyncLiskChain.o_usdt.to_wei(1))\n",
+    "\n",
     "quote = Superswap().get_super_quote(from_token=from_token, to_token=to_token, amount_in=amount)\n",
     "test_eq(quote.is_bridge, True)"
    ]
