--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -37,9 +37,9 @@
     "import copy\n",
     "from dataclasses import dataclass\n",
     "from sugar.config import XCHAIN_GAS_LIMIT_UPPERBOUND\n",
-    "from sugar.quote import Quote, pack_path\n",
+    "from sugar.quote import Quote, SuperswapQuote, pack_path\n",
     "from sugar.helpers import apply_slippage, ICACallData, hash_ICA_calls, to_bytes32, to_bytes32_str, MAX_UINT256\n",
-    "from sugar.helpers import ADDRESS_ZERO, normalize_address\n",
+    "from sugar.helpers import ADDRESS_ZERO\n",
     "from sugar.token import Token\n",
     "from sugar.pool import LiquidityPoolForSwap\n",
     "from enum import IntEnum\n",
@@ -348,42 +348,6 @@
     "#| export\n",
     "\n",
     "@dataclass(frozen=True)\n",
-    "class SuperSwapQuote:\n",
-    "    from_token: Token\n",
-    "    to_token: Token\n",
-    "    from_bridge_token: Token\n",
-    "    to_bridge_token: Token\n",
-    "    amount_in: int\n",
-    "    origin_quote: Optional[Quote] = None\n",
-    "    destination_quote: Optional[Quote] = None\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def bridge_quote(from_token: Token, to_token: Token, amount_in_wei: int) -> 'SuperSwapQuote':\n",
-    "        return SuperSwapQuote(from_token=from_token, to_token=to_token, from_bridge_token=from_token, to_bridge_token=to_token, amount_in=amount_in_wei)\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def calc_bridged_amount(from_token: Token, to_token: Token, from_bridge_token: Token, amount_in_wei: int, origin_quote: Optional[Quote] = None) -> int:\n",
-    "        if from_token != from_bridge_token:\n",
-    "            assert origin_quote is not None, \"origin_quote must be set\"\n",
-    "            return origin_quote.amount_out\n",
-    "        else: return amount_in_wei\n",
-    "\n",
-    "    @property\n",
-    "    def bridged_amount(self) -> int: \n",
-    "        return SuperSwapQuote.calc_bridged_amount(\n",
-    "            from_token=self.from_token, to_token=self.to_token,\n",
-    "            from_bridge_token=self.from_bridge_token, amount_in_wei=self.amount_in, origin_quote=self.origin_quote\n",
-    "        )\n",
-    "\n",
-    "    @property\n",
-    "    def bridged_amount_wei(self) -> int:\n",
-    "        ba = self.from_bridge_token.to_wei(self.bridged_amount)\n",
-    "        return self.from_token.to_wei(ba) if self.from_token == self.from_bridge_token else self.from_bridge_token.to_wei(ba)\n",
-    "\n",
-    "    @property\n",
-    "    def is_bridge(self) -> bool: return self.from_token == self.from_bridge_token and self.to_token == self.to_bridge_token\n",
-    "\n",
-    "@dataclass(frozen=True)\n",
     "class SuperSwapDataInput:\n",
     "    from_token: Token\n",
     "    to_token: Token\n",
@@ -408,7 +372,7 @@
     "\n",
     "    @staticmethod\n",
     "    def build(\n",
-    "            quote: SuperSwapQuote, account: str,\n",
+    "            quote: SuperswapQuote, account: str,\n",
     "            user_ICA: str, user_ICA_balance: int,\n",
     "            origin_domain: int, origin_bridge: str, origin_hook: str, origin_ICA_router: str,\n",
     "            destination_ICA_router: str, destination_router: str, destination_domain: int,\n",
