clean up method name for bridge token, update docs

--- a/src/superswap.ipynb
+++ b/src/superswap.ipynb
@@ -292,7 +292,7 @@
     "    def get_super_quote(self, from_token: Token, to_token: Token, amount_in: float) -> SuperswapQuote:\n",
     "        q, amount_in_wei = None, from_token.to_wei(amount_in)\n",
     "        with get_chain_from_token(from_token) as from_chain, get_chain_from_token(to_token) as to_chain:\n",
-    "            from_bridge_token, to_bridge_token = from_chain.get_superswap_connector_token(), to_chain.get_superswap_connector_token()\n",
+    "            from_bridge_token, to_bridge_token = from_chain.get_bridge_token(), to_chain.get_bridge_token()\n",
     "\n",
     "            # are we bridging?\n",
     "            if from_token == from_bridge_token and to_token == to_bridge_token:\n",
@@ -395,7 +395,7 @@
     "    async def get_super_quote(self, from_token: Token, to_token: Token, amount_in: float) -> SuperswapQuote:\n",
     "        q, amount_in_wei = None, from_token.to_wei(amount_in)\n",
     "        async with get_async_chain_from_token(from_token) as from_chain, get_async_chain_from_token(to_token) as to_chain:\n",
-    "            from_bridge_token, to_bridge_token = await from_chain.get_superswap_connector_token(), await to_chain.get_superswap_connector_token()\n",
+    "            from_bridge_token, to_bridge_token = await from_chain.get_bridge_token(), await to_chain.get_bridge_token()\n",
     "\n",
     "            # are we bridging?\n",
     "            if from_token == from_bridge_token and to_token == to_bridge_token:\n",
