tweak param name for superswap quotes

--- a/src/superswap.ipynb
+++ b/src/superswap.ipynb
@@ -286,11 +286,11 @@
     "\n",
     "    def swap(self, from_token: Token, to_token: Token, amount: float, slippage: Optional[float] = None) -> str:\n",
     "        self.check_chain_support(from_token, to_token)\n",
-    "        quote = self.get_super_quote(from_token=from_token, to_token=to_token, amount_in=amount)\n",
+    "        quote = self.get_super_quote(from_token=from_token, to_token=to_token, amount=amount)\n",
     "        return self.swap_from_quote(quote=quote, slippage=slippage)\n",
     "\n",
-    "    def get_super_quote(self, from_token: Token, to_token: Token, amount_in: float) -> SuperswapQuote:\n",
-    "        q, amount_in_wei = None, from_token.to_wei(amount_in)\n",
+    "    def get_super_quote(self, from_token: Token, to_token: Token, amount: float) -> SuperswapQuote:\n",
+    "        q, amount_in_wei = None, from_token.to_wei(amount)\n",
     "        with get_chain_from_token(from_token) as from_chain, get_chain_from_token(to_token) as to_chain:\n",
     "            from_bridge_token, to_bridge_token = from_chain.get_bridge_token(), to_chain.get_bridge_token()\n",
     "\n",
@@ -389,11 +389,11 @@
     "\n",
     "    async def swap(self, from_token: Token, to_token: Token, amount: float, slippage: Optional[float] = None) -> str:\n",
     "        self.check_chain_support(from_token, to_token)\n",
-    "        quote = await self.get_super_quote(from_token=from_token, to_token=to_token, amount_in=amount)\n",
+    "        quote = await self.get_super_quote(from_token=from_token, to_token=to_token, amount=amount)\n",
     "        return await self.swap_from_quote(quote=quote, slippage=slippage)\n",
     "\n",
-    "    async def get_super_quote(self, from_token: Token, to_token: Token, amount_in: float) -> SuperswapQuote:\n",
-    "        q, amount_in_wei = None, from_token.to_wei(amount_in)\n",
+    "    async def get_super_quote(self, from_token: Token, to_token: Token, amount: float) -> SuperswapQuote:\n",
+    "        q, amount_in_wei = None, from_token.to_wei(amount)\n",
     "        async with get_async_chain_from_token(from_token) as from_chain, get_async_chain_from_token(to_token) as to_chain:\n",
     "            from_bridge_token, to_bridge_token = await from_chain.get_bridge_token(), await to_chain.get_bridge_token()\n",
     "\n",
@@ -483,11 +483,11 @@
     "\n",
     "from_token, to_token, amount = AsyncOPChain.o_usdt, AsyncLiskChain.o_usdt, 1\n",
     "\n",
-    "quote = await AsyncSuperswap().get_super_quote(from_token=from_token, to_token=to_token, amount_in=amount)\n",
+    "quote = await AsyncSuperswap().get_super_quote(from_token=from_token, to_token=to_token, amount=amount)\n",
     "test_eq(quote.is_bridge, True)\n",
     "test_eq(quote.amount_out, AsyncLiskChain.o_usdt.to_wei(1))\n",
     "\n",
-    "quote = Superswap().get_super_quote(from_token=from_token, to_token=to_token, amount_in=amount)\n",
+    "quote = Superswap().get_super_quote(from_token=from_token, to_token=to_token, amount=amount)\n",
     "test_eq(quote.is_bridge, True)"
    ]
   },
