--- a/src/superswap.ipynb
+++ b/src/superswap.ipynb
@@ -287,9 +287,12 @@
     "    def swap(self, from_token: Token, to_token: Token, amount: float, slippage: Optional[float] = None) -> str:\n",
     "        self.check_chain_support(from_token, to_token)\n",
     "        quote = self.get_super_quote(from_token=from_token, to_token=to_token, amount=amount)\n",
+    "\n",
+    "        if not quote: raise ValueError(f\"No quote found for {from_token} -> {to_token}\")\n",
+    "\n",
     "        return self.swap_from_quote(quote=quote, slippage=slippage)\n",
     "\n",
-    "    def get_super_quote(self, from_token: Token, to_token: Token, amount: float) -> SuperswapQuote:\n",
+    "    def get_super_quote(self, from_token: Token, to_token: Token, amount: float) -> Optional[SuperswapQuote]:\n",
     "        q, amount_in_wei = None, from_token.to_wei(amount)\n",
     "        with get_chain_from_token(from_token) as from_chain, get_chain_from_token(to_token) as to_chain:\n",
     "            from_bridge_token, to_bridge_token = from_chain.get_bridge_token(), to_chain.get_bridge_token()\n",
@@ -302,13 +305,13 @@
     "                # we only need origin quote if we don't start with bridge token\n",
     "                if from_token != from_bridge_token:\n",
     "                    o_q = from_chain.get_quote(from_token, from_bridge_token, amount_wei=amount_in_wei)\n",
-    "                    assert o_q is not None, \"No origin quote found\"\n",
+    "                    if o_q is None: return None\n",
     "\n",
     "                # we need destination quote if we don't end with oUSDT\n",
     "                if to_token != to_bridge_token:\n",
     "                    b_a = SuperswapQuote.calc_bridged_amount(from_token, to_token, from_bridge_token, amount_in_wei, o_q)\n",
     "                    d_q = to_chain.get_quote(to_bridge_token, to_token, amount_wei=b_a)\n",
-    "                    assert d_q is not None, \"No destination quote found\"\n",
+    "                    if d_q is None: return None\n",
     "\n",
     "                q = SuperswapQuote(from_token=from_token,to_token=to_token, from_bridge_token=from_bridge_token, to_bridge_token=to_bridge_token,\n",
     "                    amount_in=amount_in_wei, origin_quote=o_q, destination_quote=d_q)\n",
@@ -390,9 +393,12 @@
     "    async def swap(self, from_token: Token, to_token: Token, amount: float, slippage: Optional[float] = None) -> str:\n",
     "        self.check_chain_support(from_token, to_token)\n",
     "        quote = await self.get_super_quote(from_token=from_token, to_token=to_token, amount=amount)\n",
+    "\n",
+    "        if not quote: raise ValueError(f\"No quote found for {from_token} -> {to_token}\")\n",
+    "\n",
     "        return await self.swap_from_quote(quote=quote, slippage=slippage)\n",
     "\n",
-    "    async def get_super_quote(self, from_token: Token, to_token: Token, amount: float) -> SuperswapQuote:\n",
+    "    async def get_super_quote(self, from_token: Token, to_token: Token, amount: float) -> Optional[SuperswapQuote]:\n",
     "        q, amount_in_wei = None, from_token.to_wei(amount)\n",
     "        async with get_async_chain_from_token(from_token) as from_chain, get_async_chain_from_token(to_token) as to_chain:\n",
     "            from_bridge_token, to_bridge_token = await from_chain.get_bridge_token(), await to_chain.get_bridge_token()\n",
@@ -405,13 +411,13 @@
     "                # we only need origin quote if we don't start with bridge token\n",
     "                if from_token != from_bridge_token:\n",
     "                    o_q = await from_chain.get_quote(from_token, from_bridge_token, amount_wei=amount_in_wei)\n",
-    "                    assert o_q is not None, \"No origin quote found\"\n",
+    "                    if o_q is None: return None\n",
     "\n",
     "                # we need destination quote if we don't end with bridge token\n",
     "                if to_token != to_bridge_token:\n",
     "                    b_a = SuperswapQuote.calc_bridged_amount(from_token, to_token, from_bridge_token, amount_in_wei, o_q)\n",
     "                    d_q = await to_chain.get_quote(to_bridge_token, to_token, amount_wei=b_a)\n",
-    "                    assert d_q is not None, \"No destination quote found\"\n",
+    "                    if d_q is None: return None\n",
     "\n",
     "                q = SuperswapQuote(from_token=from_token, to_token=to_token, from_bridge_token=from_bridge_token, to_bridge_token=to_bridge_token,\n",
     "                    amount_in=amount_in_wei, origin_quote=o_q, destination_quote=d_q)\n",
