--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -225,7 +225,7 @@
     "#| export\n",
     "\n",
     "# Constants\n",
-    "CONTRACT_BALANCE_FOR_V3_SWAPS = int(\"0x8000000000000000000000000000000000000000000000000000000000000000\", 16)\n",
+    "CONTRACT_BALANCE = int(\"0x8000000000000000000000000000000000000000000000000000000000000000\", 16)\n",
     "\n",
     "def setup_planner(quote: Quote, slippage: float, account: str, router_address: str) -> RoutePlanner:\n",
     "    \"\"\"Setup route planner with the given quote and chain\"\"\"\n",
@@ -233,7 +233,7 @@
     "    route_planner = RoutePlanner()\n",
     "    min_amount_out = apply_slippage(quote.amount_out, slippage)\n",
     "\n",
-    "    tokens_come_from_contract = quote.input.amount_in == CONTRACT_BALANCE_FOR_V3_SWAPS\n",
+    "    tokens_come_from_contract = quote.input.amount_in == CONTRACT_BALANCE\n",
     "    \n",
     "    # Handle wrapped native token if needed\n",
     "    if quote.from_token.wrapped_token_address:\n",
@@ -303,7 +303,7 @@
     "                CommandType.V2_SWAP_EXACT_IN if is_batch_v2 else CommandType.V3_SWAP_EXACT_IN,\n",
     "                [\n",
     "                    router_address if is_batch_v2 else next_batch[0][0].lp,\n",
-    "                    0 if is_batch_v2 else CONTRACT_BALANCE_FOR_V3_SWAPS,\n",
+    "                    0 if is_batch_v2 else CONTRACT_BALANCE,\n",
     "                    0,  # No expectations for middle batches\n",
     "                    pack_path(batch, for_swap=True).encoded,\n",
     "                    False,  # Money comes from contract\n",
@@ -318,7 +318,7 @@
     "            CommandType.V2_SWAP_EXACT_IN if is_last_batch_v2 else CommandType.V3_SWAP_EXACT_IN,\n",
     "            [\n",
     "                router_address if quote.to_token.wrapped_token_address else account,\n",
-    "                0 if is_last_batch_v2 else CONTRACT_BALANCE_FOR_V3_SWAPS,\n",
+    "                0 if is_last_batch_v2 else CONTRACT_BALANCE,\n",
     "                min_amount_out,\n",
     "                pack_path(last_batch, for_swap=True).encoded,\n",
     "                False,  # Money comes from contract\n",
@@ -422,7 +422,7 @@
     "    # TODO: figure out if destination quote should come with tweaked amount\n",
     "    if d_quote: \n",
     "        d_quote_with_max_amount_in = copy.deepcopy(d_quote)\n",
-    "        d_quote_with_max_amount_in.input.amount_in = CONTRACT_BALANCE_FOR_V3_SWAPS\n",
+    "        d_quote_with_max_amount_in.input.amount_in = CONTRACT_BALANCE\n",
     "    \n",
     "    destination_chain_swap_plan = setup_planner(d_quote_with_max_amount_in, slippage, account, swap_contract_addr) if d_quote else None\n",
     "\n",
@@ -435,13 +435,13 @@
     "    swap_subplan_cmds = bytes.fromhex(swap_subplan_cmds.replace('0x', '')) if swap_subplan_cmds else None\n",
     "\n",
     "    destination_transfer_args = encode(ABI_DEFINITION[CommandType.TRANSFER_FROM], [\n",
-    "        i.to_bridge_token.token_address, i.destination_router, CONTRACT_BALANCE_FOR_V3_SWAPS\n",
+    "        i.to_bridge_token.token_address, i.destination_router, CONTRACT_BALANCE\n",
     "    ])\n",
     "    # Encode fallback transfer\n",
     "    fallback_transfer_cmd = encode_packed([\"bytes1\"], [bytes([CommandType.TRANSFER_FROM])])\n",
     "    fallback_transfer_args = encode(\n",
     "        ABI_DEFINITION[CommandType.TRANSFER_FROM],\n",
-    "        [i.to_bridge_token.token_address, account, CONTRACT_BALANCE_FOR_V3_SWAPS]\n",
+    "        [i.to_bridge_token.token_address, account, CONTRACT_BALANCE]\n",
     "    )\n",
     "    subplan_abi = [\"bytes\", \"bytes[]\"]\n",
     "\n",
@@ -508,7 +508,7 @@
     "        i.user_ICA if needs_relay else i.account,\n",
     "        i.from_bridge_token.token_address,\n",
     "        i.origin_bridge,\n",
-    "        d_quote.amount_in if starts_with_bridge_token else CONTRACT_BALANCE_FOR_V3_SWAPS,\n",
+    "        d_quote.amount_in if starts_with_bridge_token else CONTRACT_BALANCE,\n",
     "        i.bridge_fee,\n",
     "        i.destination_domain,\n",
     "        starts_with_bridge_token,\n",
