change sig for V2_SWAP_EXACT_OUT

--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -103,7 +103,7 @@
     "        \"address\",\n",
     "        \"uint256\",\n",
     "        \"uint256\",\n",
-    "        \"(address,address,bool)[]\",\n",
+    "        \"bytes\",\n",
     "        \"bool\",\n",
     "        \"bool\"  # isUni\n",
     "    ],\n",
