refactor amounts params

--- a/src/pool.ipynb
+++ b/src/pool.ipynb
@@ -75,18 +75,23 @@
     "@dataclass(frozen=True)\n",
     "class Amount:\n",
     "    token: Token\n",
-    "    amount: float\n",
+    "    amount: int\n",
     "    price: \"Price\"\n",
     "\n",
     "    @classmethod\n",
-    "    def build(cls, address: str, amount: float, tokens: Dict[str, Token], prices: Dict[str, \"Price\"]) -> \"Amount\":\n",
+    "    def build(cls, address: str, amount: int, tokens: Dict[str, Token], prices: Dict[str, \"Price\"]) -> \"Amount\":\n",
     "        address = normalize_address(address)\n",
     "        if address not in tokens or address not in prices: return None\n",
     "        token = tokens[address]\n",
-    "        return Amount(token=token, amount=token.value_from_bigint(amount), price=prices[address])\n",
+    "        return Amount(token=token, amount=amount, price=prices[address])\n",
     "\n",
     "    @property\n",
-    "    def amount_in_stable(self) -> float: return self.amount * self.price.price\n"
+    "    def friendly_amount(self) -> str:\n",
+    "        \"\"\"Returns the amount in a human-readable format\"\"\"\n",
+    "        return self.token.to_decimal(self.amount)\n",
+    "\n",
+    "    @property\n",
+    "    def amount_in_stable(self) -> float: return self.friendly_amount * self.price.price\n"
    ]
   },
   {
