--- a/src/superswap.ipynb
+++ b/src/superswap.ipynb
@@ -284,7 +284,7 @@
     "            tx = chain._internal_bridge_token(from_token, to_token, amount, get_domain(int(to_token.chain_id)))\n",
     "            return f'0x{tx[\"transactionHash\"].hex()}'\n",
     "\n",
-    "    def swap(self, from_token: Token, to_token: Token, amount: float, slippage: Optional[float] = None) -> str:\n",
+    "    def swap(self, from_token: Token, to_token: Token, amount: int, slippage: Optional[float] = None) -> str:\n",
     "        self.check_chain_support(from_token, to_token)\n",
     "        quote = self.get_super_quote(from_token=from_token, to_token=to_token, amount=amount)\n",
     "\n",
@@ -292,29 +292,29 @@
     "\n",
     "        return self.swap_from_quote(quote=quote, slippage=slippage)\n",
     "\n",
-    "    def get_super_quote(self, from_token: Token, to_token: Token, amount: float) -> Optional[SuperswapQuote]:\n",
-    "        q, amount_in_wei = None, from_token.to_wei(amount)\n",
+    "    def get_super_quote(self, from_token: Token, to_token: Token, amount: int) -> Optional[SuperswapQuote]:\n",
+    "        q = None\n",
     "        with get_chain_from_token(from_token) as from_chain, get_chain_from_token(to_token) as to_chain:\n",
     "            from_bridge_token, to_bridge_token = from_chain.get_bridge_token(), to_chain.get_bridge_token()\n",
     "\n",
     "            # are we bridging?\n",
     "            if from_token == from_bridge_token and to_token == to_bridge_token:\n",
-    "                q = SuperswapQuote.bridge_quote(from_token=from_token, to_token=to_token, amount_in_wei=amount_in_wei)       \n",
+    "                q = SuperswapQuote.bridge_quote(from_token=from_token, to_token=to_token, amount=amount)       \n",
     "            else:\n",
     "                o_q, d_q = None, None\n",
     "                # we only need origin quote if we don't start with bridge token\n",
     "                if from_token != from_bridge_token:\n",
-    "                    o_q = from_chain.get_quote(from_token, from_bridge_token, amount_wei=amount_in_wei)\n",
+    "                    o_q = from_chain.get_quote(from_token, from_bridge_token, amount=amount)\n",
     "                    if o_q is None: return None\n",
     "\n",
     "                # we need destination quote if we don't end with oUSDT\n",
     "                if to_token != to_bridge_token:\n",
-    "                    b_a = SuperswapQuote.calc_bridged_amount(from_token, from_bridge_token, amount_in_wei, o_q)\n",
-    "                    d_q = to_chain.get_quote(to_bridge_token, to_token, amount_wei=b_a)\n",
+    "                    b_a = SuperswapQuote.calc_bridged_amount(from_token, from_bridge_token, amount, o_q)\n",
+    "                    d_q = to_chain.get_quote(to_bridge_token, to_token, amount=b_a)\n",
     "                    if d_q is None: return None\n",
     "\n",
     "                q = SuperswapQuote(from_token=from_token,to_token=to_token, from_bridge_token=from_bridge_token, to_bridge_token=to_bridge_token,\n",
-    "                    amount_in=amount_in_wei, origin_quote=o_q, destination_quote=d_q)\n",
+    "                    amount_in=amount, origin_quote=o_q, destination_quote=d_q)\n",
     "        return q\n",
     "\n",
     "    def swap_from_quote(self, quote: SuperswapQuote, slippage: Optional[float] = None, salt: Optional[str] = None):\n",
@@ -390,7 +390,7 @@
     "            tx = await chain._internal_bridge_token(from_token, to_token, amount, await get_domain_async(int(to_token.chain_id)))\n",
     "            return f'0x{tx[\"transactionHash\"].hex()}'\n",
     "\n",
-    "    async def swap(self, from_token: Token, to_token: Token, amount: float, slippage: Optional[float] = None) -> str:\n",
+    "    async def swap(self, from_token: Token, to_token: Token, amount: int, slippage: Optional[float] = None) -> str:\n",
     "        self.check_chain_support(from_token, to_token)\n",
     "        quote = await self.get_super_quote(from_token=from_token, to_token=to_token, amount=amount)\n",
     "\n",
@@ -398,29 +398,29 @@
     "\n",
     "        return await self.swap_from_quote(quote=quote, slippage=slippage)\n",
     "\n",
-    "    async def get_super_quote(self, from_token: Token, to_token: Token, amount: float) -> Optional[SuperswapQuote]:\n",
-    "        q, amount_in_wei = None, from_token.to_wei(amount)\n",
+    "    async def get_super_quote(self, from_token: Token, to_token: Token, amount: int) -> Optional[SuperswapQuote]:\n",
+    "        q = None\n",
     "        async with get_async_chain_from_token(from_token) as from_chain, get_async_chain_from_token(to_token) as to_chain:\n",
     "            from_bridge_token, to_bridge_token = await from_chain.get_bridge_token(), await to_chain.get_bridge_token()\n",
     "\n",
     "            # are we bridging?\n",
     "            if from_token == from_bridge_token and to_token == to_bridge_token:\n",
-    "                q = SuperswapQuote.bridge_quote(from_token=from_token, to_token=to_token, amount_in_wei=amount_in_wei)\n",
+    "                q = SuperswapQuote.bridge_quote(from_token=from_token, to_token=to_token, amount=amount)\n",
     "            else:\n",
     "                o_q, d_q = None, None\n",
     "                # we only need origin quote if we don't start with bridge token\n",
     "                if from_token != from_bridge_token:\n",
-    "                    o_q = await from_chain.get_quote(from_token, from_bridge_token, amount_wei=amount_in_wei)\n",
+    "                    o_q = await from_chain.get_quote(from_token, from_bridge_token, amount=amount)\n",
     "                    if o_q is None: return None\n",
     "\n",
     "                # we need destination quote if we don't end with bridge token\n",
     "                if to_token != to_bridge_token:\n",
-    "                    b_a = SuperswapQuote.calc_bridged_amount(from_token, from_bridge_token, amount_in_wei, o_q)\n",
-    "                    d_q = await to_chain.get_quote(to_bridge_token, to_token, amount_wei=b_a)\n",
+    "                    b_a = SuperswapQuote.calc_bridged_amount(from_token, from_bridge_token, amount, o_q)\n",
+    "                    d_q = await to_chain.get_quote(to_bridge_token, to_token, amount=b_a)\n",
     "                    if d_q is None: return None\n",
     "\n",
     "                q = SuperswapQuote(from_token=from_token, to_token=to_token, from_bridge_token=from_bridge_token, to_bridge_token=to_bridge_token,\n",
-    "                    amount_in=amount_in_wei, origin_quote=o_q, destination_quote=d_q)\n",
+    "                    amount_in=amount, origin_quote=o_q, destination_quote=d_q)\n",
     "\n",
     "        return q\n",
     "\n",
@@ -487,7 +487,8 @@
     "from sugar.chains import AsyncOPChain, AsyncLiskChain\n",
     "from fastcore.test import test_eq\n",
     "\n",
-    "from_token, to_token, amount = AsyncOPChain.o_usdt, AsyncLiskChain.o_usdt, 1\n",
+    "from_token, to_token = AsyncOPChain.o_usdt, AsyncLiskChain.o_usdt\n",
+    "amount = from_token.to_wei(1)\n",
     "\n",
     "quote = await AsyncSuperswap().get_super_quote(from_token=from_token, to_token=to_token, amount=amount)\n",
     "test_eq(quote.is_bridge, True)\n",
