--- a/src/quote.ipynb
+++ b/src/quote.ipynb
@@ -143,21 +143,21 @@
     "        return self.destination_quote.amount_out if self.destination_quote else self.bridged_amount\n",
     "\n",
     "    @staticmethod\n",
-    "    def bridge_quote(from_token: Token, to_token: Token, amount_in_wei: int) -> 'SuperswapQuote':\n",
-    "        return SuperswapQuote(from_token=from_token, to_token=to_token, from_bridge_token=from_token, to_bridge_token=to_token, amount_in=amount_in_wei)\n",
+    "    def bridge_quote(from_token: Token, to_token: Token, amount: int) -> 'SuperswapQuote':\n",
+    "        return SuperswapQuote(from_token=from_token, to_token=to_token, from_bridge_token=from_token, to_bridge_token=to_token, amount_in=amount)\n",
     "\n",
     "    @staticmethod\n",
-    "    def calc_bridged_amount(from_token: Token, from_bridge_token: Token, amount_in_wei: int, origin_quote: Optional[Quote] = None) -> int:\n",
+    "    def calc_bridged_amount(from_token: Token, from_bridge_token: Token, amount: int, origin_quote: Optional[Quote] = None) -> int:\n",
     "        if from_token != from_bridge_token:\n",
     "            assert origin_quote is not None, \"origin_quote must be set\"\n",
     "            return origin_quote.amount_out\n",
-    "        else: return amount_in_wei\n",
+    "        else: return amount\n",
     "\n",
     "    @property\n",
     "    def bridged_amount(self) -> int: \n",
     "        return SuperswapQuote.calc_bridged_amount(\n",
     "            from_token=self.from_token,\n",
-    "            from_bridge_token=self.from_bridge_token, amount_in_wei=self.amount_in, origin_quote=self.origin_quote\n",
+    "            from_bridge_token=self.from_bridge_token, amount=self.amount_in, origin_quote=self.origin_quote\n",
     "        )\n",
     "\n",
     "    @property\n",
